--- a/rock-paper-scissors/style/rock-paper-scissors.css
+++ b/rock-paper-scissors/style/rock-paper-scissors.css
@@ -2,11 +2,29 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   background-color: rgb(26, 26, 26);
+  width: 650px;
+  margin: auto;
+
+}
+
+p {
+  margin: 0;
 }
 
 .rock-paper-scissors-title {
+  text-align: center;
   font-size: 30px;
   font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 50px;
+}
+
+.button-container {
+  position: relative;
+  display: flex;
+  justify-content:space-evenly;
+  align-items: center;
+  margin: 0 30px;
 }
 
 .button-container button {
@@ -16,8 +34,6 @@ body {
   width: 120px;
   height: 120px;
   border-radius: 200px;
-  margin-right: 15px;
-  margin-bottom: 20px;
   transition: background-color 0.15s;
 }
 
@@ -29,22 +45,119 @@ body {
   background-color: rgba(211, 211, 211, 1);
 
 }
-.rock-img, .paper-img, .scissors-img {
+.icon-img {
   width: 50px;
 }
 
 .result {
-  font-size: 25px;
+  font-size: 50px;
   font-weight: bold;
 }
 
-.move {
-  margin-bottom: 60px;
-}
-
-.reset-button {
+.reset-button,
+.yes-button,
+.no-button {
   border: none;
   padding: 8px 15px;
   font-size: 15px;
   cursor: pointer;
+}
+
+.auto-play-button {
+  font-size: 15px;
+  color: white;
+}
+
+.on-off-text {
+  padding-top: 5px;
+  font-size: 20px;
+}
+
+.score-board {
+  height: 350px;
+  padding-top: 20px;
+  margin-bottom: 20px;
+}
+
+.result-container {
+  display: flex;
+  justify-content: center;
+}
+.move-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.player-img,
+.computer-img {
+  width: 300px;
+}
+
+.player-img {
+  transform: scaleX(-1) rotate(-90deg);
+}
+
+.player-move {
+  padding-left: 20px;
+}
+
+.computer-move {
+  padding-right: 20px;
+  text-align: right;
+}
+
+.computer-img {
+  transform: rotate(-90deg);
+}
+
+.game-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.score-container {
+  margin-bottom: 20px;
+}
+
+.score {
+  text-align: center;
+}
+
+.status-text {
+  text-align: center;
+  padding: 10px;
+}
+.status-text.toHide {
+  opacity: 0;
+  transition: opacity 0.15s ;
+}
+
+.reset-button-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.reset-confirm-container {
+  z-index: 1;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: -20px;
+  white-space: nowrap;
+  background-color: rgba(50,50,50, 1);
+  padding: 20px;
+  border-radius: 5px;
+  transition: opacity 0.15s;
+}
+
+.reset-confirm-container p {
+  margin-bottom: 10px;
+}
+.reset-confirm-container.toHide {
+  opacity: 0;
+  pointer-events: none;
 }
